# SPICE2SVG

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
examples/: 1.cir  2.cir  3.cir  4.cir  5.cir  cmos_inverter.cir  common_emitter_amp.cir  rc_lowpass.cir  rlc_bandpass.cir  voltage_divider.cir
output/: 1.json  1_skidl.py  2.json  2_skidl.py  3.json  3_skidl.py  4.json  4_skidl.py  5.json  5_skidl.py  cmos_inverter.json  cmos_inverter_skidl.py  common_emitter_amp.json  common_emitter_amp_skidl.py  rc_lowpass.json  rc_lowpass_skidl.py  rlc_bandpass.json  rlc_bandpass_skidl.py  test_cmos2.json  test_cmos3.json  test_full_cmos.json  test_m.json  test_q.json  voltage_divider.json  voltage_divider_skidl.py
src/spice2svg/: __init__.py  __main__.py  cli.py  pipeline.py
src/spice2svg/generator/: __init__.py  footprint_map.py  skidl_generator.py  templates.py
src/spice2svg/models/: __init__.py  circuit.py  component.py  net.py
src/spice2svg/parser/: __init__.py  spice_dialect.py  spice_parser.py  tokenizer.py
src/spice2svg/recognizer/: __init__.py  engine.py  pattern_def.py  patterns.py  supernode.py
src/spice2svg/renderer/: __init__.py  json_converter.py  skin.py  svg_renderer.py
tests/: test_generator.py  test_models.py  test_parser.py  test_pipeline.py  test_recognizer.py  test_renderer.py  test_tokenizer.py
